--- a/LeetCode/1421-1430/1423. 可获得的最大点数（中等）.md
+++ b/LeetCode/1421-1430/1423. 可获得的最大点数（中等）.md
@@ -1,21 +1,18 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[1423. 可获得的最大点数](https://leetcode-cn.com/problems/maximum-points-you-can-obtain-from-cards/solution/jian-dan-de-hua-dong-chuang-kou-he-kuai-1go5h/)** ，难度为 **中等**。
+这是 LeetCode 上的 **[1423. 可获得的最大点数](https://leetcode.cn/problems/maximum-points-you-can-obtain-from-cards/solutions/2551466/gong-shui-san-xie-zhuan-huan-wei-gu-ding-pbvd/)** ，难度为 **中等**。
 
 Tag : 「滑动窗口」
 
 
 
+几张卡牌排成一行，每张卡牌都有一个对应的点数，点数由整数数组 `cardPoints` 给出。
 
-几张卡牌 排成一行，每张卡牌都有一个对应的点数。点数由整数数组 cardPoints 给出。
-
-每次行动，你可以从行的开头或者末尾拿一张卡牌，最终你必须正好拿 k 张卡牌。
+每次行动，你可以从行的开头或者末尾拿一张卡牌，最终你必须正好拿 `k` 张卡牌。
 
 你的点数就是你拿到手中的所有卡牌的点数之和。
 
-给你一个整数数组 cardPoints 和整数 k，请你返回可以获得的最大点数。
-
-
+给你一个整数数组 `cardPoints` 和整数 `k`，请你返回可以获得的最大点数。
 
 示例 1：
 ```
@@ -57,48 +54,87 @@ Tag : 「滑动窗口」
 ```
 
 提示：
-* 1 <= cardPoints.length <= $10^5$
-* 1 <= cardPoints[i] <= $10^4$
-* 1 <= k <= cardPoints.length
+* $1 <= cardPoints.length <= 10^5$
+* $1 <= cardPoints[i] <= 10^4$
+* $1 <= k <= cardPoints.length$
 
 ---
 
 ### 滑动窗口
 
-简单的推导：
+从两边选卡片，选 `k` 张，卡片总数量为 `n` 张，即有 `n - k` 张不被选择。
 
-从两边选择卡片，选择 `k` 张，卡片的总数量为 `n` 张，即有 `n - k` 张不被选择。
+所有卡片总和 `sum` 固定，要使选择的 `k` 张的总和最大，反过来就是要让不被选择的 `n - k` 张总和最小。
 
-所有卡边的总和 `sum` 固定，要使选择的 `k` 张的总和最大，反过来就是要让不被选择的 `n - k` 张的总和最小。
+原问题等价为：**从 `cardPoints` 中找长度为 `n - k` 的连续段，使其总和最小。**
 
-可以使用滑动窗口来计算 `n - k` 张卡片的最小总和 `min`，最终答案为 `sum - min`。
+具体的，用变量 `sum` 代指 `cardPoints` 总和，`cur` 代表长度固定为 `n - k` 的当前窗口总和，`minv` 代表所有长度为 `n - k` 的窗口中总和最小的值。
 
-以下代码，可以作为滑动窗口模板使用：
+起始先将滑动窗口压满，取得第一个滑动窗口的目标值 `cur`（同时更新为 `minv`），随后往后继续处理 `cardPoints`，每往前滑动一位，需要删除一个和添加一个元素，并不断更新 `minv`，最终 `sum - minv` 即是答案。
 
-*PS. 你会发现以下代码和 [643. 子数组最大平均数 I](https://leetcode-cn.com/problems/maximum-average-subarray-i/solution/hua-dong-chuang-kou-luo-ti-han-mo-ban-by-buo3/) 代码很相似，因为是一套模板，所以说这道其实是道简单题，只是多了一个小学奥数难度的等式推导过程 ~*
-
-1. 初始化将滑动窗口压满，取得第一个滑动窗口的目标值
-
-2. 继续滑动窗口，每往前滑动一次，需要删除一个和添加一个元素
-
-代码：
+Java 代码：
 ```Java
 class Solution {
-    public int maxScore(int[] nums, int k) {
-        int n = nums.length, len = n - k;
+    public int maxScore(int[] cardPoints, int k) {
+        int n = cardPoints.length, len = n - k;
         int sum = 0, cur = 0;
-        for (int i = 0; i < n; i++) sum += nums[i];
-        for (int i = 0; i < len; i++) cur += nums[i]; 
-        int min = cur;
+        for (int i = 0; i < n; i++) sum += cardPoints[i];
+        for (int i = 0; i < len; i++) cur += cardPoints[i]; 
+        int minv = cur;
         for (int i = len; i < n; i++) { 
-            cur = cur + nums[i] - nums[i - len]; 
-            min = Math.min(min, cur);
+            cur = cur + cardPoints[i] - cardPoints[i - len]; 
+            minv = Math.min(minv, cur);
         }
-        return sum - min;
+        return sum - minv;
     }
 }
 ```
-* 时间复杂度：每个元素最多滑入和滑出窗口一次。复杂度为 $O(n)$
+C++ 代码：
+```C++
+class Solution {
+public:
+    int maxScore(vector<int>& cardPoints, int k) {
+        int n = cardPoints.size(), len = n - k;
+        int sum = 0, cur = 0;
+        for (int i = 0; i < n; i++) sum += cardPoints[i];
+        for (int i = 0; i < len; i++) cur += cardPoints[i]; 
+        int minv = cur;
+        for (int i = len; i < n; i++) { 
+            cur = cur + cardPoints[i] - cardPoints[i - len]; 
+            minv = min(minv, cur);
+        }
+        return sum - minv;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def maxScore(self, cardPoints: List[int], k: int) -> int:
+        n, m = len(cardPoints), len(cardPoints) - k
+        total, cur = sum(cardPoints), sum(cardPoints[:m])
+        minv = cur
+        for i in range(m, n):
+            cur = cur + cardPoints[i] - cardPoints[i - m]
+            minv = min(minv, cur)
+        return total - minv
+```
+TypeScript 代码：
+```TypeScript
+function maxScore(cardPoints: number[], k: number): number {
+    const n = cardPoints.length, m = n - k;
+    let tot = 0, cur = 0;
+    for (let i = 0; i < n; i++) tot += cardPoints[i];
+    for (let i = 0; i < m; i++) cur += cardPoints[i];
+    let minv = cur;
+    for (let i = m; i < n; i++) {
+        cur = cur + cardPoints[i] - cardPoints[i - m];
+        minv = Math.min(minv, cur);
+    }
+    return tot - minv;
+};
+```
+* 时间复杂度：每个元素最多滑入和滑出窗口一次，复杂度为 $O(n)$
 * 空间复杂度：$O(1)$
 
 ---
