--- a/LeetCode/201-210/209. 长度最小的子数组（中等）.md
+++ b/LeetCode/201-210/209. 长度最小的子数组（中等）.md
@@ -46,7 +46,7 @@ Tag : 「前缀和」、「二分」、「滑动窗口」
 
 利用前缀和数组的「单调递增」（即具有二段性），该操作可使用「二分」来做。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public int minSubArrayLen(int t, int[] nums) {
@@ -54,7 +54,7 @@ class Solution {
         int[] sum = new int[n + 10];
         for (int i = 1; i <= n; i++) sum[i] = sum[i - 1] + nums[i - 1];
         for (int i = 1; i <= n; i++) {
-            int s = sum[i], d = s - t;
+            int d = sum[i] - t;
             int l = 0, r = i;
             while (l < r) {
                 int mid = l + r + 1 >> 1;
@@ -66,6 +66,68 @@ class Solution {
         return ans == n + 10 ? 0 : ans;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int minSubArrayLen(int t, vector<int>& nums) {
+        int n = nums.size(), ans = n + 10;
+        vector<int> sum(n + 10, 0);
+        for (int i = 1; i <= n; i++) sum[i] = sum[i - 1] + nums[i - 1];      
+        for (int i = 1; i <= n; i++) {
+            int d = sum[i] - t;
+            int l = 0, r = i;
+            while (l < r) {
+                int mid = (l + r + 1) >> 1;
+                if (sum[mid] <= d) l = mid;
+                else r = mid - 1;
+            }
+            if (sum[r] <= d) ans = min(ans, i - r);
+        }
+        return ans == n + 10 ? 0 : ans;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def minSubArrayLen(self, t: int, nums: List[int]) -> int:
+        n, ans = len(nums), len(nums) + 10
+        s = [0] * (n + 10)
+        for i in range(1, n + 1):
+            s[i] = s[i - 1] + nums[i - 1]
+        for i in range(1, n + 1):
+            d = s[i] - t
+            l, r = 0, i
+            while l < r:
+                mid = (l + r + 1) // 2
+                if s[mid] <= d:
+                    l = mid
+                else:
+                    r = mid - 1
+            if s[r] <= d: 
+                ans = min(ans, i - r)
+        return 0 if ans == n + 10 else ans
+```
+TypeScript 代码：
+```TypeScript
+function minSubArrayLen(t: number, nums: number[]): number {
+    let n = nums.length, ans = n + 10;
+    const sum = new Array(n + 10).fill(0);
+    for (let i = 1; i <= n; i++) sum[i] = sum[i - 1] + nums[i - 1];
+    for (let i = 1; i <= n; i++) {
+        const d = sum[i] - t;
+        let l = 0, r = i;
+        while (l < r) {
+            const mid = l + r + 1 >> 1;
+            if (sum[mid] <= d) l = mid;    
+            else r = mid - 1;
+        }
+        if (sum[r] <= d) ans = Math.min(ans, i - r);
+    }
+    return ans == n + 10 ? 0 : ans;
+};
 ```
 * 时间复杂度：预处理前缀和数组的复杂度为 $O(n)$，遍历前缀和数组统计答案复杂度为 $O(n\log{n})$。整体复杂度为 $O(n\log{n})$
 * 空间复杂度：$O(n)$
