--- a/LeetCode/811-820/816. 模糊坐标（中等）.md
+++ b/LeetCode/811-820/816. 模糊坐标（中等）.md
@@ -125,7 +125,7 @@ function ambiguousCoordinates(_s: string): string[] {
 }
 ```
 Python 代码：
-```Python3 []
+```Python3
 class Solution:
     def ambiguousCoordinates(self, _s: str) -> List[str]:
         def search(s, start, end):
