--- a/LeetCode/831-840/834. 树中距离之和（困难）.md
+++ b/LeetCode/831-840/834. 树中距离之和（困难）.md
@@ -166,6 +166,55 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int N = 30010, M = 60010, idx = 0, n;
+    int he[30010], e[60010], ne[60010];
+    int f[30010], c[30010], g[30010];
+    void add(int a, int b) {
+        e[idx] = b;
+        ne[idx] = he[a];
+        he[a] = idx++;
+    }
+    vector<int> sumOfDistancesInTree(int _n, vector<vector<int>>& es) {
+        n = _n;
+        memset(he, -1, sizeof(he));
+        for (auto& e : es) {
+            int a = e[0], b = e[1];
+            add(a, b);
+            add(b, a);
+        }
+        dfs1(0, -1);
+        dfs2(0, -1);
+        vector<int> ans(n);
+        for (int i = 0; i < n; i++) ans[i] = f[i] + g[i];
+        return ans;
+    }
+    vector<int> dfs1(int u, int fa) {
+        int tot = 0, cnt = 0;
+        for (int i = he[u]; i != -1; i = ne[i]) {
+            int j = e[i];
+            if (j == fa) continue;
+            vector<int> next = dfs1(j, u);
+            tot += next[0] + next[1] + 1;
+            cnt += next[1] + 1;
+        }
+        f[u] = tot; c[u] = cnt;
+        return {tot, cnt};
+    }
+    void dfs2(int u, int fa) {
+        for (int i = he[u]; i != -1; i = ne[i]) {
+            int j = e[i];
+            if (j == fa) continue;
+            g[j] += g[u] + n - 1 - c[u];
+            g[j] += f[u] - f[j] - c[j] + c[u] - 1 - c[j];
+            dfs2(j, u);
+        }
+    }
+};
+```
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(n)$
 
