--- a/LeetCode/2051-2060/2055. 蜡烛之间的盘子（中等）.md
+++ b/LeetCode/2051-2060/2055. 蜡烛之间的盘子（中等）.md
@@ -55,7 +55,7 @@ Tag : 「前缀和」、「二分」
 
 然后处理询问时的「找区间 $[a, b]$ 边缘蜡烛」操作可通过对数组「二分」来做，而「查询区间 $[c, d]$ 内的盘子数量」操作可直接查询「前缀和」数组。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public int[] platesBetweenCandles(String s, int[][] qs) {
@@ -95,6 +95,125 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    vector<int> platesBetweenCandles(string s, vector<vector<int>>& qs) {
+        vector<int> ans(qs.size(), 0);
+        vector<int> sum(s.length() + 1, 0);
+        vector<int> list;
+        for (int i = 0; i < s.length(); i++) {
+            if (s[i] == '|') list.push_back(i);
+            sum[i + 1] = sum[i] + (s[i] == '*' ? 1 : 0);
+        }
+        if (list.empty()) return ans;
+        for (int i = 0; i < qs.size(); i++) {
+            int a = qs[i][0], b = qs[i][1];
+            int c = -1, d = -1;
+            // 找到 a 右边最近的蜡烛
+            int l = 0, r = list.size() - 1;
+            while (l < r) {
+                int mid = l + r >> 1;
+                if (list[mid] >= a) r = mid;
+                else l = mid + 1;
+            }
+            if (list[r] >= a) c = list[r];
+            else continue;
+            // 找到 b 左边最近的蜡烛
+            l = 0; r = list.size() - 1;
+            while (l < r) {
+                int mid = l + r + 1 >> 1;
+                if (list[mid] <= b) l = mid;
+                else r = mid - 1;
+            }
+            if (list[r] <= b) d = list[r];
+            else continue;
+            if (c <= d) ans[i] = sum[d + 1] - sum[c];
+        }
+        return ans;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def platesBetweenCandles(self, s: str, qs: List[List[int]]) -> List[int]:
+        ans = [0] * len(qs)
+        sum_val = [0] * (len(s) + 1)
+        candle_positions = [i for i, char in enumerate(s) if char == '|']
+        for i in range(len(s)):
+            sum_val[i + 1] = sum_val[i] + (s[i] == '*')
+        if not candle_positions:
+            return ans
+        for i in range(len(qs)):
+            a, b = qs[i]
+            c, d = -1, -1
+            # 找到 a 右边最近的蜡烛
+            l, r = 0, len(candle_positions) - 1
+            while l < r:
+                mid = l + r >> 1
+                if candle_positions[mid] >= a:
+                    r = mid
+                else:
+                    l = mid + 1
+            if candle_positions[r] >= a:
+                c = candle_positions[r]
+            else:
+                continue
+            # 找到 b 左边最近的蜡烛
+            l, r = 0, len(candle_positions) - 1
+            while l < r:
+                mid = l + r + 1 >> 1
+                if candle_positions[mid] <= b:
+                    l = mid
+                else:
+                    r = mid - 1
+            if candle_positions[r] <= b:
+                d = candle_positions[r]
+            else:
+                continue
+            if c <= d:
+                ans[i] = sum_val[d + 1] - sum_val[c]
+        return ans
+```
+TypeScript 代码：
+```TypeScript
+function platesBetweenCandles(s: string, qs: number[][]): number[] {
+    const ans = new Array(qs.length).fill(0);
+    const sum = new Array(s.length + 1).fill(0);
+    const list = [];
+    for (let i = 0; i < s.length; i++) {
+        if (s[i] == '|') list.push(i);
+        sum[i + 1] = sum[i] + (s[i] === '*' ? 1 : 0);
+    }
+    if (list.length == 0) return ans;
+    for (let i = 0; i < qs.length; i++) {
+        const a = qs[i][0], b = qs[i][1];
+        let c = -1, d = -1;
+        // 找到 a 右边最近的蜡烛
+        let l = 0, r = list.length - 1;
+        while (l < r) {
+            const mid = l + r >> 1;
+            if (list[mid] >= a) r = mid;
+            else l = mid + 1;
+        }
+        if (list[r] >= a) c = list[r];
+        else continue;
+        // 找到 b 左边最近的蜡烛
+        l = 0; r = list.length - 1;
+        while (l < r) {
+            const mid = l + r + 1 >> 1;
+            if (list[mid] <= b) l = mid;
+            else r = mid - 1;
+        }
+        if (list[r] <= b) d = list[r];
+        else continue;
+        if (c <= d) ans[i] = sum[d + 1] - sum[c];
+    }
+    return ans; 
+};
+```
 * 时间复杂度：令 `s` 的长度为 $n$，`qs` 长度为 $m$。统计所有的蜡烛并存入 `list` 的复杂度为 $O(n)$；预处理前缀和数组复杂度为 $O(n)$；处理单个询问需要进行两次二分（蜡烛数量最多为 $n$），复杂度为 $O(\log{n})$，共有 $m$ 个询问需要处理，复杂度为 $O(m \times \log{n})$。整体复杂度为 $O(n + m\log{n})$
 * 空间复杂度：$O(n)$
 
@@ -106,7 +225,7 @@ class Solution {
 
 我们可以在预处理前缀和的同时，预处理每个位置左右最近的蜡烛下标，从而省去每次二分。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public int[] platesBetweenCandles(String s, int[][] qs) {
@@ -129,6 +248,29 @@ class Solution {
         return ans;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    vector<int> platesBetweenCandles(string s, vector<vector<int>>& qs) {
+        vector<int> l(s.length(), 0), r(s.length(), 0);
+        vector<int> sum(s.length() + 1, 0);
+        for (int i = 0, j = s.length() - 1, p = -1, q = -1; i < s.length(); i++, j--) {
+            if (s[i] == '|') p = i;
+            if (s[j] == '|') q = j;
+            l[i] = p; r[j] = q;
+            sum[i + 1] = sum[i] + (s[i] == '*' ? 1 : 0);
+        }
+        vector<int> ans(qs.size(), 0);
+        for (int i = 0; i < qs.size(); i++) {
+            int a = qs[i][0], b = qs[i][1];
+            int c = r[a], d = l[b];
+            if (c != -1 && c <= d) ans[i] = sum[d + 1] - sum[c];
+        }
+        return ans;
+    }
+};
 ```
 * 时间复杂度：$O(n + m)$
 * 空间复杂度：$O(n)$
