--- a/LeetCode/231-240/238. 除自身以外数组的乘积（中等）.md
+++ b/LeetCode/231-240/238. 除自身以外数组的乘积（中等）.md
@@ -47,7 +47,7 @@ $$
 
 预处理完 `s1` 和 `s2` 之后，即可计算每个 $ans[i - 1] = s1[i - 1] \times s2[i + 1]$（`ans` 数组下标从 $0$ 开始）。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public int[] productExceptSelf(int[] nums) {
@@ -62,6 +62,46 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    vector<int> productExceptSelf(vector<int>& nums) {
+        int n = nums.size();
+        vector<int> s1(n + 2, 1), s2(n + 2, 1);
+        for (int i = 1; i <= n; i++) s1[i] = s1[i - 1] * nums[i - 1];
+        for (int i = n; i >= 1; i--) s2[i] = s2[i + 1] * nums[i - 1];        
+        vector<int> ans(n);
+        for (int i = 1; i <= n; i++) ans[i - 1] = s1[i - 1] * s2[i + 1];
+        return ans;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def productExceptSelf(self, nums: List[int]) -> List[int]:
+        n = len(nums)
+        s1, s2 = [1] * (n + 2), [1] * (n + 2)
+        for i in range(1, n + 1):
+            s1[i] = s1[i - 1] * nums[i - 1]
+        for i in range(n, 0, -1):
+            s2[i] = s2[i + 1] * nums[i - 1]
+        ans = [s1[i - 1] * s2[i + 1] for i in range(1, n + 1)]
+        return ans
+```
+TypeScript 代码：
+```TypeScript
+function productExceptSelf(nums: number[]): number[] {
+    const n = nums.length;
+    const s1 = new Array(n + 2).fill(1), s2 = new Array(n + 2).fill(1);
+    for (let i = 1; i <= n; i++) s1[i] = s1[i - 1] * nums[i - 1];
+    for (let i = n; i >= 1; i--) s2[i] = s2[i + 1] * nums[i - 1];
+    const ans = new Array(n);
+    for (let i = 1; i <= n; i++) ans[i - 1] = s1[i - 1] * s2[i + 1];
+    return ans;
+};
+```
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(n)$
 
@@ -73,7 +113,7 @@ class Solution {
 
 这样很好处理，按照我们解法一的思路，将两部分分开算即可：建立 `ans` 数组，先从前往后遍历 `nums`，计算每个 $ans[i]$ 前缀乘值部分，再从后往前遍历 `nums`，计算每个 $ans[i]$ 后缀乘值的部分，两部分相乘即是最终的 $ans[i]$。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public int[] productExceptSelf(int[] nums) {
@@ -88,6 +128,53 @@ class Solution {
         return ans;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    vector<int> productExceptSelf(vector<int>& nums) {
+        int n = nums.size();
+        vector<int> ans(n, 1);
+        for (int i = 1, j = 1; i <= n; i++) {
+            ans[i - 1] = j; j *= nums[i - 1];
+        }
+        for (int i = n, j = 1; i >= 1; i--) {
+            ans[i - 1] *= j; j *= nums[i - 1];
+        }
+        return ans;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def productExceptSelf(self, nums: List[int]) -> List[int]:
+        n = len(nums)
+        ans = [1] * n
+        j = 1
+        for i in range(1, n + 1):
+            ans[i - 1] *= j
+            j *= nums[i - 1]
+        j = 1
+        for i in range(n, 0, -1):
+            ans[i - 1] *= j
+            j *= nums[i - 1]
+        return ans
+```
+TypeScript 代码：
+```TypeScript
+function productExceptSelf(nums: number[]): number[] {
+    const n = nums.length;
+    const ans = new Array(n).fill(1);
+    for (let i = 1, j = 1; i <= n; i++) {
+        ans[i - 1] *= j; j *= nums[i - 1];
+    }
+    for (let i = n, j = 1; i >= 1; i--) {
+        ans[i - 1] *= j; j *= nums[i - 1];
+    }
+    return ans;
+};
 ```
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(1)$
