--- a/LeetCode/1831-1840/1833. 雪糕的最大数量（中等）.md
+++ b/LeetCode/1831-1840/1833. 雪糕的最大数量（中等）.md
@@ -43,10 +43,10 @@ Tony 一共有 `coins` 现金可以用于消费，他想要买尽可能多的雪
 ```
 
 提示：
-* costs.length == n
-* 1 <= n <= $10^5$
-* 1 <= costs[i] <= $10^5$
-* 1 <= coins <= $10^8$
+* $costs.length = n$
+* $1 <= n <= 10^5$
+* $1 <= costs[i] <= 10^5$
+* $1 <= coins <= 10^8$
 
 ---
 
@@ -54,7 +54,7 @@ Tony 一共有 `coins` 现金可以用于消费，他想要买尽可能多的雪
 
 从题面看，是一道「01 背包」问题，每个物品的成本为 $cost[i]$，价值为 $1$。
 
-但「01 背包」的复杂度为 $O(N* C)$，其中 $N$ 为物品数量（数量级为 $10^5$），$C$ 为背包容量(数量级为 $10^8$)。显然会 TLE。
+但「01 背包」的复杂度为 $O(N\times C)$，其中 $N$ 为物品数量（数量级为 $10^5$），$C$ 为背包容量(数量级为 $10^8$)。显然会 `TLE`。
 
 换个思路发现，每个被选择的物品对答案的贡献都是 $1$，优先选择价格小的物品会使得我们剩余金额尽可能的多，将来能够做的决策方案也就相应变多。
 
@@ -100,22 +100,63 @@ Tony 一共有 `coins` 现金可以用于消费，他想要买尽可能多的雪
 
 排序，从前往后决策，直到不能决策为止。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
-    public int maxIceCream(int[] cs, int t) {
-        int n = cs.length;
-        Arrays.sort(cs);
+    public int maxIceCream(int[] costs, int coins) {
+        int n = costs.length;
+        Arrays.sort(costs);
         int ans = 0;
         for (int i = 0; i < n; i++) {
-            if (t >= cs[i]) {
-                ans++;
-                t -= cs[i];
+            if (coins >= costs[i]) {
+                ans++; coins -= costs[i];
             }
         }
         return ans;
     }
 }
+```
+Python 代码：
+```Python
+class Solution:
+    def maxIceCream(self, costs: List[int], coins: int) -> int:
+        costs.sort()
+        ans = 0
+        for i in range(len(costs)):
+            if coins >= costs[i]:
+                ans += 1
+                coins -= costs[i]
+        return ans
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int maxIceCream(vector<int>& costs, int coins) {
+        int n = costs.size();
+        sort(costs.begin(), costs.end());
+        int ans = 0;
+        for (int i = 0; i < n; i++) {
+            if (coins >= costs[i]) {
+                ans++; coins -= costs[i];
+            }
+        }
+        return ans;
+    }
+};
+```
+TypeScript 代码：
+```TypeScript
+function maxIceCream(costs: number[], coins: number): number {
+    costs.sort((a, b) => a - b);
+    let ans = 0;
+    for (let i = 0; i < costs.length; i++) {
+        if (coins >= costs[i]) {
+            ans++; coins -= costs[i];
+        }
+    }
+    return ans;
+};
 ```
 * 时间复杂度：排序复杂度为 $O(n\log{n})$；获取答案的复杂度为 $O(n)$。整体复杂度为 $O(n\log{n})$
 * 空间复杂度：排序复杂度为 $O(\log{n})$。整体复杂度为 $O(\log{n})$
